# videoprocess

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.gpu.yml  docker-compose.pds-kafka.yml  docker-compose.yml  go.mod  go.sum
backend/: Dockerfile.api  Dockerfile.api-go  Dockerfile.channelops-runner-go  Dockerfile.ffmpeg-worker-go  Dockerfile.worker  alembic.ini  channel_agent_runner.py  event_outbox_relay.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_material_library.py  003_video_schedule_windows.py  004_autoflow.py  005_autoflow_review_state.py  005_deployed_schema_compatibility.py  006_autoflow_storyboard.py  007_autoflow_used_clips.py  008_intermediate_artifact_cache.py  009_channel_agent_config.py  010_channel_agent_queue.py  011_channel_agent_production.py  012_channel_ops_hardening.py  013_event_outbox.py  014_channel_ops_live_loop.py  015_channel_ops_approval_bridge.py  016_channel_ops_material_ledger.py  017_channel_ops_self_driving.py  018_go_orchestrator_owner.py  019_channelops_go_live_phase0.py  020_channelops_decision_audit_failure_category.py  021_channelops_discovery_signals.py  022_channelops_feedback_learning.py  023_youtube_upload_operations.py  024_channelops_human_review_authority.py  025_autoflow_revision_idempotency.py  026_autoflow_authority_fence.py  027_publication_promotion_operations.py  028_channelops_metric_schedules.py  029_channelops_discovery_ingestion_runs.py  030_channelops_intake_pause.py  031_guarded_schedule_job_authority.py
backend/app/: config.py  db.py  main.py  pds_client.py
backend/app/api/: artifacts.py  assets.py  autoflow.py  channel_agent.py  downloads.py  internal_schedule.py  job_helpers.py  jobs.py  llm.py  materials.py  node_types.py  pipelines.py
backend/app/autoflow/: __init__.py  capability_manifest.py  clip_ranker.py  content_strategy.py  (+18 more)
backend/scripts/: export_node_registry_manifest.py  migrate_local_storage_to_minio.py
backend/tests/: conftest.py  smoke_test.py  test_channelops_go_autoflow_contract.py  test_go_contract_fixtures.py  test_go_dockerfiles.py  test_go_orchestrator_owner_schema.py  test_node_registry_manifest.py  test_pds_client.py  test_schedule_service.py  test_startup_recovery.py  video_node_matrix.py
backend/videoprocess.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/worker/: main.py
services/vp-feature-aggregator/: .gitignore  AGENTS.md  README.md  pyproject.toml
(+643 files in other folders)
