[project]
name = "vp-feature-aggregator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "aiokafka>=0.10.0",
  "asyncpg>=0.29.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "jsonschema>=4.22.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-snappy>=0.7.1",
  "redis>=5.0.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
include = ["feature_aggregator*"]
